--- a/style.css
+++ b/style.css
@@ -1,3 +1,57 @@
 body {
-    font-family: 'Work Sans', sans-serif;
+  font-family: 'Work Sans', sans-serif;
+  background: #F0F1F4 0% 0% no-repeat padding-box;
+  opacity: 1;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+}
+
+.content-wrapper {
+  height: 800px;
+  width: 1280px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#logos {
+  display: flex;
+  gap: 14.3px;
+  align-items: center;
+  justify-content: center;
+  margin-top: 60.05px;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+}
+
+.header h1 {
+  text-align: center;
+  font: normal normal bold 56px/60px Work Sans;
+  letter-spacing: -0.67px;
+  opacity: 1;
+  width: 562px;
+  height: 126px;
+}
+
+.form {
+  width: 451px;
+  height: 491px;
+  margin: 0px auto;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  border-radius: 24px;
+  opacity: 1;
+}
+
+#signup {
+  width: 451px;
+  height: 491px;
+  margin: 0px auto;
+  display: flex;
+  flex-direction: column;
 }
