--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Work Sans', sans-serif;
-  background: #F0F1F4 0% 0% no-repeat padding-box;
+  background: #F0F1F4;
   opacity: 1;
 }
 
@@ -43,15 +43,88 @@ main {
   width: 451px;
   height: 491px;
   margin: 0px auto;
-  background: #FFFFFF 0% 0% no-repeat padding-box;
+  background: #FFFFFF;
   border-radius: 24px;
   opacity: 1;
 }
 
 #signup {
-  width: 451px;
-  height: 491px;
+  width: 387px;
+  /* height: 491px; */
   margin: 0px auto;
   display: flex;
   flex-direction: column;
+  background: #FFFFFF;
+  border-radius: 24px;
+  padding-right: 32px;
+  padding-left: 32px;
+  padding-top: 36px;
+  padding-bottom: 40px;
+}
+
+.button {
+  width: 387px;
+  height: 54px;
+  background: #F05F5D;
+  border-radius: 12px;
+  /* opacity: 1; */
+  font: normal normal 600 16px/28px Work Sans;
+  letter-spacing: 0px;
+  color: #FFFFFF;
+  text-transform: capitalize;
+  border: none;
+}
+
+h2 {
+  margin: 0px;
+  margin-bottom: 16px;
+}
+
+.form-fields {
+  /* width: 100%; */
+  height: 44px;
+  background: #FFFFFF;
+  border: 2px solid #ECEDF2;
+  border-radius: 12px;
+  /* margin: 0px auto;
+  opacity: 1; */
+}
+
+label {
+  margin: 0px;
+  margin-bottom: 6px;
+}
+
+input[type=checkbox] {
+  width: 16px;
+}
+
+input[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+option {
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+select {
+  width: 100%;
+  padding: 12px 20px;
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #8E8E90;
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: #8E8E90;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: #8E8E90;
 }
